--- a/public/scss/_gallery.scss
+++ b/public/scss/_gallery.scss
@@ -15,3 +15,34 @@
         height: 350px;
     }
 }
+
+@media screen and (max-width: 1440px){
+    .container-gallery{
+        grid-template-columns: 3fr 3fr;
+        margin-left: 3em;
+    }
+}
+@media screen and (max-width: 1024px){
+    .container-gallery{
+        margin-left: 1em;
+        .img-gallery{
+            width: 450px;
+            height: 260px;
+        }
+    }
+}
+@media screen and (max-width: 768px){
+    .container-gallery{
+        margin-left: 9em;
+        grid-template-columns: 1fr;
+    }
+}
+@media screen and (max-width: 425px){
+    .container-gallery{
+        margin-left: 0em;
+        .img-gallery{
+            width: 400px;
+            height: 240px;
+        }
+    }
+}
