--- a/public/scss/_homepage.scss
+++ b/public/scss/_homepage.scss
@@ -1,20 +1,17 @@
 body{
     background-color: rgb(40, 40, 40);
+    
     .container-logo {
         position: fixed;
         width: 150px;
         display: flex;
         justify-content: center;
         align-items: center;
-        z-index: 1;
-        margin-left: 1em;
+        z-index: 3;
+        // margin-left: 1em;
         img{
             width: 100px;
             height: 100px;
-        }
-        i {
-            font-size: 30px;
-            margin-top: 1.2em;
         }
         p{
             font-size: 24px;
@@ -28,6 +25,8 @@ body{
         height: 10vh;
         // position: absolute;
         width: 100vw;
+        z-index: 2;
+
 
         div:nth-child(1){
             width: 67%;
@@ -68,8 +67,32 @@ body{
                         left: 0px;
                         transition: all 0.4s ease-in-out;
                     }
-
+                    @media screen and (max-width: 1440px){
+                        a{
+                            font-size: 27px;
+                        }
+                    }
+                    @media screen and (max-width: 1024px){
+                        a{
+                            font-size: 22px;
+                        }
+                    }
                 }
+                
+                @media screen and (max-width: 1440px){
+
+                    li{
+                        height: 5em;
+                        width: 13em;
+                    }
+                }
+                @media screen and (max-width: 1024px){
+
+                    li{
+                        width: 7em;
+                    }
+                }
+
                 li:hover a::after{
                     color: red;
                     background-color:$red;
@@ -80,8 +103,66 @@ body{
                 }
             }
         }
-    }
+        @media screen and (max-width: 1440px){
+            div:nth-child(2){
+                margin-left: 2em;
+            }
+        }
+        @media screen and (max-width: 425px){
+            div:nth-child(2){
+                margin-left: 0em;
+            }
+        }
 
+    }
+    @media screen and (max-width: 768px){
+        .container-logo {
+            display: flex;
+            flex-direction: column;
+            i:nth-child(2){
+                color: black;
+                font-size: 20px;
+                height: 12px;
+            }
+            p:nth-child(3){
+                font-size: 18px;
+                font-family: 'Roboto';
+            }
+        }
+        .container-nav {
+            position: fixed;
+            display: flex;
+            flex-direction: column;
+            width: 100vw;
+            height: auto;
+            display:none;
+            div:nth-child(1){
+                width: 100%;
+                margin-left: 0px;
+                ul{
+                    display: flex;
+                    flex-direction: column;
+                    width: 100%;
+                    li{
+                        width: 100%;
+                        height: 6em;
+                        border: none;
+                        border-bottom: 1px solid $red;
+                    }
+                    li:active{
+                        background-color: rgb(60, 60, 60);
+                    }
+                }
+            }
+            .container-nav-bis{
+                display: flex;
+                justify-content: center;
+                height: 4em;
+                // flex-direction: column;
+                
+            }
+        }
+    }
     #bg-img{
         height: 100vh;
         width: 100%;
@@ -89,7 +170,7 @@ body{
         display: flex;
         justify-content: center;
         align-items: center;
-
+        background-size: cover;
         .container-home{
             border-radius: 10px;
             display: flex;
@@ -109,10 +190,13 @@ body{
                 font-size: 40px;
             }
         }
+        @media screen and (max-width: 425px){
+            text-align: center;
+        }
     }
 
     .container-nav-bis {
-
+        
         display: flex;
         align-items: center;
         
@@ -133,6 +217,11 @@ body{
                 color:$red;
             }
         }
+        @media screen and (max-width: 425px){
+            #register {
+                margin-left: 0;
+            }
+        }
         #login{
             font-family: 'Roboto';
             background-color: white;
@@ -143,6 +232,7 @@ body{
             display: flex;
             justify-content: center;
             align-items: center;
+            border-radius: 10px;
             a{
                 outline: none;
                 text-decoration: none;
@@ -163,7 +253,16 @@ body{
                 color: rgb(40, 40, 40);
             }
         }
-
+        @media screen and (max-width: 1440px){
+            #login{
+                margin-right: 20px;
+            }
+        }
+        // @media screen and (max-width: 425px){
+        //     #login{
+        //         width: 12em;
+        //     }
+        // }
         a {
             i{
                 color: white;
@@ -174,7 +273,7 @@ body{
                 color: $red;
             }
         }
-
+        
         p:nth-child(2) {
             font-family: 'Roboto';
             color: white;
@@ -192,7 +291,8 @@ body{
             display: flex;
             justify-content: center;
             align-items: center;
-
+            border-radius: 10px;
+            
             a{
                 outline: none;
                 text-decoration: none;
@@ -221,6 +321,8 @@ body{
             display: flex;
             justify-content: center;
             align-items: center;
+            border-radius: 10px;
+            
             a{
                 outline: none;
                 text-decoration: none;
@@ -237,7 +339,6 @@ body{
         #profil:active {
             background-color: $red;
         }
-
-
     }
+
 }
