--- a/public/scss/_register.scss
+++ b/public/scss/_register.scss
@@ -24,6 +24,12 @@
         justify-content: center;
         align-items: center;
 
+        @media screen and (max-width:425px) {
+            form{
+                width: 14em;
+            }
+        }
+
         .form-birthday {
             color: white;
             font-family: 'Poppins';
