--- a/templates/common/_navbar.html.twig
+++ b/templates/common/_navbar.html.twig
@@ -1,8 +1,7 @@
 <div class="container-logo">
     <img src="{{asset('/img/LogoNN.png')}}" alt="logo newname">
     {# <i id="arrow-logo" class="fas fa-long-arrow-alt-left"></i> #}
-    <i id="arrow-up" class="fas fa-sort-up"></i>
-    <p class="menu-logo">Menu </p>
+    <i id="burger" class="fas fa-bars"></i>
 </div>
 <nav class="container-nav">
     <div>
