--- a/public/scss/_homepage.scss
+++ b/public/scss/_homepage.scss
@@ -13,6 +13,21 @@ body{
             width: 100px;
             height: 100px;
         }
+        #burger {
+            display: none;
+            color: black;
+            font-size: 34px;
+        }
+        @media screen and (max-width: 768px){
+            #burger{
+                display: block;
+            }
+        }
+        @media screen and (max-width: 425px){
+            #burger{
+                display: block;
+            }
+        }
 
     }
     .container-nav{
