--- a/public/css/style.css
+++ b/public/css/style.css
@@ -559,7 +559,6 @@ body .container-nav-bis #profil:active {
 .container-profil {
   background-color: #282828;
   width: 100%;
-  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -575,6 +574,11 @@ body .container-nav-bis #profil:active {
   font-size: 34px;
   color: white;
   text-shadow: 2px 2px 2px #000000;
+}
+@media screen and (max-width: 425px) {
+  .container-profil div:first-child {
+    padding-top: 9em;
+  }
 }
 .container-profil .confirm-delete {
   display: none;
@@ -735,26 +739,31 @@ body .container-nav-bis #profil:active {
   }
 }
 @media screen and (max-width: 768px) {
-  .container-profil .bigcontainer-grey {
-    height: 100vh;
-  }
   .container-profil .bigcontainer-grey .container-grey {
     position: static;
   }
   .container-profil .bigcontainer-grey .container-grey a #icon-edit {
     left: 565px;
-    top: 40px;
+    top: 130px;
     z-index: 1;
   }
   .container-profil .bigcontainer-grey .container-grey a #icon-delete {
     left: 520px;
-    top: 40px;
+    top: 130px;
     z-index: 1;
   }
 }
 @media screen and (max-width: 425px) {
   .container-profil .bigcontainer-grey {
-    margin-top: 15em;
+    padding: 1em;
+  }
+  .container-profil .bigcontainer-grey .container-grey a #icon-edit {
+    left: 365px;
+    top: 210px;
+  }
+  .container-profil .bigcontainer-grey .container-grey a #icon-delete {
+    left: 320px;
+    top: 210px;
   }
 }
 
@@ -1215,6 +1224,59 @@ body .container-nav-bis #profil:active {
     width: 400px;
     height: 240px;
   }
+}
+.container-footer {
+  width: 100vw;
+  height: 15vh;
+  background-color: #AE2525;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+.container-footer .container-footer-logo {
+  width: 25%;
+  height: auto;
+  margin-left: 1em;
+}
+.container-footer .container-footer-logo #logo-footer {
+  height: 100px;
+  width: 100px;
+  z-index: 1;
+}
+.container-footer div:nth-child(2) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+}
+.container-footer div:nth-child(2) > p {
+  color: black;
+  font-family: "Poppins";
+  font-size: 30px;
+}
+@media screen and (max-width: 425px) {
+  .container-footer div:nth-child(2) p {
+    font-size: 18px;
+  }
+}
+.container-footer .social-media {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 25%;
+}
+.container-footer .social-media i {
+  font-size: 34px;
+  margin-right: 0.5em;
+}
+.container-footer .social-media i:first-child:hover {
+  color: #28a9ff;
+  cursor: pointer;
+}
+.container-footer .social-media i:last-child:hover {
+  color: #5e5e5e;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=style.css.map */
