--- a/public/scss/_profil.scss
+++ b/public/scss/_profil.scss
@@ -1,7 +1,7 @@
 .container-profil{
     background-color: rgb(40, 40, 40);
     width: 100%;
-    height: 100vh;
+    // height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,6 +17,11 @@
             color: white;
             text-shadow: 2px 2px 2px #000000;
 
+        }
+    }
+    @media screen and (max-width: 425px){
+        div:first-child{
+            padding-top: 9em;
         }
     }
     
@@ -94,7 +99,7 @@
                     font-size: 24px;
                     color: green;
                 }
-                
+
                 #icon-delete{
                     position: absolute;
                     top: 10px;
@@ -200,18 +205,18 @@
 
     @media screen and (max-width: 768px){
         .bigcontainer-grey {
-            height: 100vh;
+            // height: 100vh;
             .container-grey{
                 position: static;
                 a{
                     #icon-edit{
                         left: 565px;
-                        top: 40px;
+                        top: 130px;
                         z-index: 1;
                     }
                     #icon-delete{
                         left: 520px;
-                        top: 40px;
+                        top: 130px;
                         z-index: 1;
                     }
                 }
@@ -221,7 +226,20 @@
 
     @media screen and (max-width:425px){
         .bigcontainer-grey{
-            margin-top: 15em;
+            // margin-top: 10em;
+            padding: 1em;
+            .container-grey{
+                a{
+                    #icon-edit{
+                        left: 365px;
+                        top: 210px;
+                    }
+                    #icon-delete{
+                        left: 320px;
+                        top: 210px;
+                    }
+                }
+            }
         }
     }
 }
