--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,7 +91,7 @@ body .container-nav {
   border-bottom: 1px solid #AE2525;
   display: flex;
   height: 10vh;
-  width: 100vw;
+  width: 100%;
   z-index: 2;
 }
 body .container-nav div:nth-child(1) {
@@ -168,6 +168,14 @@ body .container-nav div:nth-child(1) ul li:hover {
 @media screen and (max-width: 1440px) {
   body .container-nav div:nth-child(1) {
     width: 58%;
+  }
+}
+@media screen and (max-width: 1080px) {
+  body .container-nav div:nth-child(1) {
+    width: 100%;
+  }
+  body .container-nav div:nth-child(1) ul li {
+    width: 9em;
   }
 }
 @media screen and (max-width: 1024px) {
@@ -366,6 +374,14 @@ body .container-nav-bis #logout:hover a {
 body .container-nav-bis #logout:active {
   background-color: #AE2525;
 }
+@media screen and (max-width: 1080px) {
+  body .container-nav-bis #logout {
+    width: 5em;
+  }
+  body .container-nav-bis #logout a {
+    font-size: 16px;
+  }
+}
 body .container-nav-bis #profil {
   font-family: "Roboto";
   background-color: white;
@@ -393,6 +409,11 @@ body .container-nav-bis #profil:hover a {
 }
 body .container-nav-bis #profil:active {
   background-color: #AE2525;
+}
+@media screen and (max-width: 1080px) {
+  body .container-nav-bis #profil a {
+    font-size: 16px;
+  }
 }
 
 .container-form {
@@ -1029,6 +1050,11 @@ body .container-nav-bis #profil:active {
     font-size: 36px;
   }
 }
+@media screen and (max-width: 1080px) {
+  #bg-img-join .container-join h2 {
+    font-size: 27px;
+  }
+}
 @media screen and (max-width: 1024px) {
   #bg-img-join .container-join h2 {
     font-size: 26px;
@@ -1077,6 +1103,11 @@ body .container-nav-bis #profil:active {
 @media screen and (max-width: 1440px) {
   #bg-img-join .container-join p:nth-child(4) {
     width: 47%;
+  }
+}
+@media screen and (max-width: 1080px) {
+  #bg-img-join .container-join p:nth-child(4) {
+    width: 63%;
   }
 }
 @media screen and (max-width: 1024px) {
@@ -1144,6 +1175,11 @@ body .container-nav-bis #profil:active {
     font-size: 30px;
   }
 }
+@media screen and (max-width: 1080px) {
+  #bg-img-soutien .container-soutien h2 {
+    width: 84%;
+  }
+}
 @media screen and (max-width: 1024px) {
   #bg-img-soutien .container-soutien h2 {
     font-size: 21px;
@@ -1201,6 +1237,15 @@ body .container-nav-bis #profil:active {
     margin-left: 3em;
   }
 }
+@media screen and (max-width: 1080px) {
+  .container-gallery {
+    margin-left: 0.5em;
+  }
+  .container-gallery .img-gallery {
+    width: 480px;
+    height: 290px;
+  }
+}
 @media screen and (max-width: 1024px) {
   .container-gallery {
     margin-left: 1em;
@@ -1226,7 +1271,7 @@ body .container-nav-bis #profil:active {
   }
 }
 .container-footer {
-  width: 100vw;
+  width: 100%;
   height: 15vh;
   background-color: #AE2525;
   display: flex;
